--- a/paper/IEEE-ICSC-2016/technical-reports/IEEE-ICSC-2016-evaluation.tex
+++ b/paper/IEEE-ICSC-2016/technical-reports/IEEE-ICSC-2016-evaluation.tex
@@ -302,7 +302,7 @@ We took all well-established and newly developed SBE vocabularies into account a
 SBE sciences require high-quality data for their empirical research. For more than a decade, members of the SBE community have been developing and using a
 metadata standard, composed of almost twelve hundred metadata fields, known as the \emph{Data Documentation Initiative (DDI)}, \footnote{\url{http://www.ddialliance.org/Specification/}}
 an XML format to disseminate, manage,
-and reuse data collected and archived for research \cite{Vardigan2008}. 
+and reuse data collected and archived for research \cite{Vardigan-2008}. 
 In XML, the definition of schemas containing constraints and the validation of data according to these constraints is commonly used to ensure a certain level of data quality.
 With the rise of the Web of Data, data professionals and institutions are very interested in having their data be discovered and used by publishing their data directly in RDF or at least publish accurate metadata about their data to facilitate data integration. Therefore, not only established vocabularies like SKOS are used; 
 recently, members of the SBE and Linked Data community developed with the \emph{DDI-RDF Discovery Vocabulary (DDI-RDF)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}} a means to expose \emph{DDI} metadata as Linked Data. 
@@ -691,6 +691,7 @@ Table \ref{tab:disco-overview} comprehends the number of triples, data sets, and
       \textbf{Data Sets} & \textbf{SPARQL Endpoint} \\		
       \hline
       \emph{Missy} & \url{http://svko-missy:8181/openrdf-workbench/repositories/native-java-store/summary} \\
+			             & \url{www.gesis.org/missy/sparql} \\
 			\emph{DwB} & \url{http://dwb-dev.nsd.uib.no/sparql} \\
 			\emph{DDA-SND} & \url{http://ddi-rdf.borsna.se/endpoint/} \\
 		\end{tabular}
@@ -1565,7 +1566,7 @@ Table \ref{tab:thesauri-overview} comprehends the number of triples, data sets, 
 		\begin{tabular}{l|l}
       \textbf{Abbr.} & \textbf{Thesauri} \\		
       \hline
-    \emph{TheSoz} & \emph{Thesaurus for the Social Sciences}\tablefootnote{\url{http://www.ecb.europa.eu/home/html/index.en.html}} \\
+    \emph{TheSoz} & \emph{Thesaurus for the Social Sciences}\tablefootnote{\url{http://www.gesis.org/en/services/research/thesauri-und-klassifikationen/social-science-thesaurus/}} \\
 	  \emph{STW} & \emph{Thesaurus for Economics}\tablefootnote{\url{http://zbw.eu/stw/versions/latest/about}} \\
 	  \emph{AGROVOC} & \emph{AGROVOC Multilingual agricultural thesaurus}\tablefootnote{\url{http://202.45.139.84:10035/catalogs/fao/repositories/agrovoc}} \\
 		\emph{UNESCO} & \emph{UNESCO Thesaurus}\tablefootnote{\url{http://skos.um.es/sparql/}} \\
